--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
  
     </p>
  
-            <button type="submit" name="sub" style=" background:  #21618c  ; color:#fff; font-size: 12pt; height: 30px; width:260px;border-style: dotted; border-color:#2e4c8a  #2e4c8a   #2e4c8a   #2e4c8a " class="btn btn-primary w-100 sub_b">Sign In</button>
+            <button type="submit" name="sub" style=" background:  #21618c  ; color:#fff; font-size: 12pt; height: 30px; width:260px;border-style: dotted; border-color:#2e4c8a  #2e4c8a   #2e4c8a   #2e4c8a " class="btn btn-primary w-100 sub_b">Zalogować się</button>
 
          </form>
 
